--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -69,7 +69,7 @@ html(lang='en')
           li
             a(href='/products') Products
           li
-            a(href='#', onclick='jumpToTeam()') Contact
+            a(href='#', onclick='jumpToContact()') Contact
           li
             a(href='https://github.com/arkis') Github
 
