Add products page

--- a/app/src/styles.sass
+++ b/app/src/styles.sass
@@ -21,6 +21,8 @@ body
   color: $color-light
   margin: 0
 
+  font-family: $sans-serif-stack
+
 
 h1,
 h2,
@@ -52,3 +54,6 @@ h4
 
 h5
   font-size: 1.8rem
+
+a
+  color: $color-light
