--- a/app/src/products/main.sass
+++ b/app/src/products/main.sass
@@ -22,3 +22,9 @@ a
 
   padding: .25em 2em
   border: .1em solid $color-light
+
+  transition: color .25s, background-color .25s
+
+  &:hover
+    color: $color-dark
+    background-color: $color-light
