--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -33,6 +33,8 @@ html(lang='en')
 
     title Arkis
 
+    include favicon
+
     //- Google Analytics
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
