--- a/app/src/home/intro-animation/intro-anim-keyframes.sass
+++ b/app/src/home/intro-animation/intro-anim-keyframes.sass
@@ -8,6 +8,7 @@
 
 $corner-anim-distance: 25%
 
+
 @keyframes topleft-move-in-1
   from
     opacity: 0
@@ -16,6 +17,7 @@ $corner-anim-distance: 25%
   to
     opacity: 1
     transform: none
+
 
 @keyframes topright-move-in-2
   from
@@ -26,6 +28,7 @@ $corner-anim-distance: 25%
     opacity: 1
     transform: none
 
+
 @keyframes bottomright-move-in-3
   from
     opacity: 0
@@ -35,6 +38,7 @@ $corner-anim-distance: 25%
     opacity: 1
     transform: none
 
+
 @keyframes bottomleft-move-in-4
   from
     opacity: 0
@@ -43,6 +47,7 @@ $corner-anim-distance: 25%
   to
     opacity: 1
     transform: none
+
 
 @keyframes corners-spin-5
   from
@@ -60,92 +65,15 @@ $corner-anim-distance: 25%
     transform: rotate(90deg)
 
 
-
-// Hover and click animations
-
-
-
-@keyframes topleft-scale-out
-  from
-    transform: none
-
+@keyframes grow-7
   50%
-    transform: translateX(-25%)
+    transform: scale(.95)
 
   to
-    transform: translate(-25%, -25%)
+    transform: scale(1.1)
 
-@keyframes topright-scale-out
-  from
-    transform: none
 
-  50%
-    transform: translateX(25%)
-
-  to
-    transform: translate(25%, -25%)
-
-@keyframes bottomleft-scale-out
-  from
-    transform: none
-
-  50%
-    transform: translateX(25%)
-
-  to
-    transform: translate(25%, 25%)
-
-@keyframes bottomright-scale-out
-  from
-    transform: none
-
-  50%
-    transform: translateX(-25%)
-
-  to
-    transform: translate(-25%, 25%)
-
-@keyframes topleft-scale-in
-  from
-    transform: translate(-25%, -25%)
-
-  50%
-    transform: translateX(-25%)
-
-  to
-    transform: none
-
-@keyframes topright-scale-in
-  from
-    transform: translate(25%, -25%)
-
-  50%
-    transform: translateX(25%)
-
-  to
-    transform: none
-
-@keyframes bottomright-scale-in
-  from
-    transform: translate(25%, 25%)
-
-  50%
-    transform: translateX(25%)
-
-  to
-    transform: none
-
-@keyframes bottomleft-scale-in
-  from
-    transform: translate(-25%, 25%)
-
-  50%
-    transform: translateX(-25%)
-
-  to
-    transform: none
-
-@keyframes corners-blink
+@keyframes corners-blink-8
   from
     opacity: 1
 
@@ -159,18 +87,7 @@ $corner-anim-distance: 25%
     opacity: 0
 
 
-
-// Post-click build out animations
-
-
-@keyframes fade-out
-  from
-    opacity: 1
-
-  to
-    opacity: 0
-
-@keyframes letter-scale
+@keyframes letter-scale-9
   from
     transform: translate(-50%, -52.5%)
 
@@ -180,3 +97,11 @@ $corner-anim-distance: 25%
   to
     transform: translate(-50%, -52.5%) scale(100)
     visibility: hidden
+
+
+@keyframes fade-out-10
+  from
+    opacity: 1
+
+  to
+    opacity: 0
