--- a/app/src/404/index.pug
+++ b/app/src/404/index.pug
@@ -15,6 +15,8 @@ html(lang='en')
       ga('create', 'UA-72586531-6', 'auto');
       ga('send', 'pageview');
 
+    link(rel='stylesheet', href='/404/style.css')
+
   body
     canvas#mist
     .vignette
