--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -44,6 +44,8 @@ html(lang='en')
       ga('create', 'UA-72586531-6', 'auto');
       ga('send', 'pageview');
 
+    link(rel='stylesheet', href='home/style.css')
+
 
   body(ontouchstart='')
 
