--- a/app/src/products/index.pug
+++ b/app/src/products/index.pug
@@ -15,6 +15,8 @@ html(lang='en')
       ga('create', 'UA-72586531-6', 'auto');
       ga('send', 'pageview');
 
+    link(rel='stylesheet', href='/products/style.css')
+
   body
     .main
       h1.center.caps There's nothing here yet
