Remove text from team social links

--- a/app/src/home/member-info.sass
+++ b/app/src/home/member-info.sass
@@ -31,6 +31,7 @@
     position: relative
 
     font-family: $sans-serif-stack
+    text-align: center
 
     transition: box-shadow .25s
     box-shadow: 0 4px 10px 0 $shadow-color, 0 4px 20px 0 $shadow-color
@@ -57,24 +58,18 @@
     div.name
       font-weight: 700
       font-size: 1.15rem
-      text-align: center
 
       margin: .3em 0
 
     a
       color: inherit
       text-decoration: none
-      display: block
-      display: flex
-      align-items: center
       justify-content: center
       font-size: .8rem
 
-      span
-        margin-right: .5em
-
       i.ion
         font-size: 1.5em
+        margin: 0 .25em
 
       i.ion-logo-twitter
         $twitter-color: #00aced
