Float social links on hover

--- a/app/src/home/member-info.sass
+++ b/app/src/home/member-info.sass
@@ -70,6 +70,10 @@
       i.ion
         font-size: 1.5em
         margin: 0 .25em
+        transition: .25s transform
+
+        &:hover
+          transform: translateY(-15%)
 
       i.ion-logo-twitter
         $twitter-color: #00aced
