--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -55,24 +55,23 @@
         &::after
           content: ''
           position: absolute
-          width: .4rem
-          height: .4rem
+          top: -.1em
+          width: .25em
+          height: 1.4em
           opacity: 0
+          border-top: .1em solid $color-light
+          border-bottom: .1em solid $color-light
           transition: .33s transform, .33s opacity
 
         &::before
-          bottom: 0
           left: 0
-          border-left: .1rem solid $color-light
-          border-bottom: .1rem solid $color-light
-          transform: translate(25%, -25%) scale(.75)
+          border-left: .1em solid $color-light
+          transform: translateX(75%)
 
         &::after
-          top: 0
           right: 0
-          border-top: .1rem solid $color-light
-          border-right: .1rem solid $color-light
-          transform: translate(-25%, 25%) scale(.75)
+          border-right: .1em solid $color-light
+          transform: translateX(-75%)
 
         &:hover
           &::before,
@@ -80,10 +79,10 @@
             opacity: 1
 
           &::before
-            transform: translate(-100%, 25%)
+            transform: translateX(-100%)
 
           &::after
-            transform: translate(100%, -25%)
+            transform: translateX(100%)
 
       &.ion
         font-size: 1.5em
