--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -50,39 +50,22 @@
 
       position: relative
 
-      &:not(.ion)
-        &::before,
+      &:not(.ion)::after
+        content: ''
+        width: 100%
+        height: 1.5px
+        position: absolute
+        left: 0
+        bottom: -.25em
+        background-color: $color-light
+        transform: scaleX(0)
+        transform-origin: bottom right
+        transition: transform .4s cubic-bezier(.215, .61, .355, 1), background-color .5s
+
+      &:not(.ion):hover
         &::after
-          content: ''
-          position: absolute
-          top: -.1em
-          width: .25em
-          height: 1.4em
-          opacity: 0
-          border-top: .1em solid $color-light
-          border-bottom: .1em solid $color-light
-          transition: .33s transform, .33s opacity
-
-        &::before
-          left: 0
-          border-left: .1em solid $color-light
-          transform: translateX(75%)
-
-        &::after
-          right: 0
-          border-right: .1em solid $color-light
-          transform: translateX(-75%)
-
-        &:hover
-          &::before,
-          &::after
-            opacity: 1
-
-          &::before
-            transform: translateX(-100%)
-
-          &::after
-            transform: translateX(100%)
+          transform: scaleX(1)
+          transform-origin: bottom left
 
       &.ion
         font-size: 1.5em
