Dynamic copyright year

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -136,7 +136,7 @@ html(lang='en')
 
         .left
           h5 Arkis
-          span.copyright Copyright &copy; 2017 Arkis
+          span.copyright Copyright &copy; <span id="copyright-year">0000</span> Arkis
 
         .footer-logo A
 
